--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.11-common-algorithms/2.11-common-algorithms.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.11-common-algorithms/2.11-common-algorithms.html
@@ -256,6 +256,167 @@
             <h3 class="sub-heading">2.11.7 - Make judgements about the suitability of using different algorithms for sorting.</h3>
             <p><strong>Bubble sort</strong> is rarely used outside teaching. <strong>Insertion sort</strong> is good for small datasets. <strong>Merge sort</strong> is best for large datasets due to efficiency.</p>
         </section>
+
+                
+                        <!--quiz-->
+        <div class="quiz-container" id="quiz">
+            <div class="quiz-question" id="question"></div>
+            <div class="quiz-options" id="options"></div>
+            <div class="quiz-feedback" id="feedback"></div>
+            <button class="quiz-next" id="nextBtn" style="display:none;">Next</button>
+        <div class="quiz-result" id="result"></div>
+        </div>
+
+  <script>
+    const quizData = [
+    {
+        question: "Which search algorithm checks each element one by one until it finds the target?",
+        options: ["Linear Search", "Binary Search", "Merge Sort", "Bubble Sort"],
+        answer: "Linear Search",
+        explanation: "Linear search examines each element in sequence, making it simple but inefficient for large datasets."
+    },
+    {
+        question: "Binary search is most efficient when:",
+        options: [
+        "The dataset is unsorted",
+        "The dataset is sorted",
+        "The dataset has only one element",
+        "The dataset is small"
+        ],
+        answer: "The dataset is sorted",
+        explanation: "Binary search repeatedly halves a sorted list to quickly locate the target."
+    },
+    {
+        question: "Which sorting algorithm repeatedly swaps adjacent elements until the list is sorted?",
+        options: ["Bubble Sort", "Insertion Sort", "Merge Sort", "Linear Search"],
+        answer: "Bubble Sort",
+        explanation: "Bubble sort compares and swaps neighbors repeatedly, making it simple but inefficient for large datasets."
+    },
+    {
+        question: "Which sorting algorithm is most efficient for large datasets?",
+        options: ["Bubble Sort", "Insertion Sort", "Merge Sort", "Linear Search"],
+        answer: "Merge Sort",
+        explanation: "Merge sort uses divide-and-conquer to sort large datasets efficiently (O(n log n))."
+    },
+    {
+        question: "A best-case scenario for linear search occurs when:",
+        options: [
+        "The target element is at the end",
+        "The target element is not present",
+        "The target element is the first item",
+        "The list is very large"
+        ],
+        answer: "The target element is the first item",
+        explanation: "In best case, linear search finds the element immediately, requiring only one comparison."
+    },
+    {
+        question: "Which factor is NOT typically used to compare algorithms?",
+        options: ["Memory space", "Execution time", "Number of comparisons", "Color of code"],
+        answer: "Color of code",
+        explanation: "Algorithm efficiency is measured using memory, execution time, and comparisons, not code appearance."
+    },
+    {
+        question: "When is insertion sort preferred over merge sort?",
+        options: [
+        "For very large datasets",
+        "For small or nearly sorted datasets",
+        "For unsorted datasets with millions of elements",
+        "When memory usage is unlimited"
+        ],
+        answer: "For small or nearly sorted datasets",
+        explanation: "Insertion sort is simple and efficient for small or mostly sorted data."
+    },
+    {
+        question: "Linear search is suitable when:",
+        options: [
+        "The dataset is large and sorted",
+        "The dataset is small or unsorted",
+        "Only binary data is used",
+        "Efficiency is critical"
+        ],
+        answer: "The dataset is small or unsorted",
+        explanation: "Linear search works well on small datasets or when data is unsorted, despite being slower for large datasets."
+    }
+    ];
+
+
+
+        let currentQ = 0;
+        let score = 0;
+
+        const questionEl = document.getElementById("question");
+        const optionsEl = document.getElementById("options");
+        const feedbackEl = document.getElementById("feedback");
+        const resultEl = document.getElementById("result");
+        const nextBtn = document.getElementById("nextBtn");
+
+        function showQuestion() {
+          const q = quizData[currentQ];
+          questionEl.textContent = q.question;
+          feedbackEl.textContent = "";
+          feedbackEl.className = "quiz-feedback";
+          nextBtn.style.display = "none";
+
+          optionsEl.innerHTML = "";
+          q.options.forEach(opt => {
+            const btn = document.createElement("button");
+            btn.textContent = opt;
+            btn.onclick = () => checkAnswer(opt, btn);
+            optionsEl.appendChild(btn);
+          });
+        }
+
+        function checkAnswer(answer, button) {
+          const q = quizData[currentQ];
+          const optionButtons = optionsEl.querySelectorAll("button");
+
+          // Disable all buttons after an answer
+          optionButtons.forEach(b => b.disabled = true);
+
+          if (answer === q.answer) {
+            score++;
+            button.classList.add("correct");
+            feedbackEl.textContent = "✅ Correct! " + q.explanation;
+            feedbackEl.classList.add("correct");
+          } else {
+            button.classList.add("wrong");
+            feedbackEl.textContent = `❌ Wrong. The correct answer is "${q.answer}". ${q.explanation}`;
+            feedbackEl.classList.add("wrong");
+
+            // Highlight correct answer
+            optionButtons.forEach(b => {
+              if (b.textContent === q.answer) {
+                b.classList.add("correct");
+              }
+            });
+          }
+
+          nextBtn.style.display = "block";
+        }
+
+        function nextQuestion() {
+          currentQ++;
+          if (currentQ < quizData.length) {
+            showQuestion();
+          } else {
+            showResult();
+          }
+        }
+
+        function showResult() {
+          questionEl.textContent = "";
+          optionsEl.innerHTML = "";
+          feedbackEl.textContent = "";
+          nextBtn.style.display = "none";
+          resultEl.textContent = `You scored ${score} out of ${quizData.length}! 🎉`;
+        }
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        // Start quiz
+        showQuestion();
+      </script>
+
     </main>
     
     <arrow-Nav>
