--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.7-functions-and-procedures/2.7-functions-and-procedures.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.7-functions-and-procedures/2.7-functions-and-procedures.html
@@ -234,6 +234,199 @@
             print("Error: Cannot divide by zero!")
             </code></pre>
         </section>
+
+                
+                        <!--quiz-->
+        <div class="quiz-container" id="quiz">
+            <div class="quiz-question" id="question"></div>
+            <div class="quiz-options" id="options"></div>
+            <div class="quiz-feedback" id="feedback"></div>
+            <button class="quiz-next" id="nextBtn" style="display:none;">Next</button>
+        <div class="quiz-result" id="result"></div>
+        </div>
+
+  <script>
+      const quizData = [
+        {
+            question: "What is the main difference between a function and a procedure?",
+            options: [
+            "Functions return a value, procedures do not",
+            "Procedures return a value, functions do not",
+            "Functions cannot take parameters, procedures can",
+            "Procedures are built-in, functions are user-defined"
+            ],
+            answer: "Functions return a value, procedures do not",
+            explanation: "Functions must return a result, while procedures only perform an action."
+        },
+        {
+            question: "Which of the following is a valid function in Python?",
+            options: [
+            "def greet(name): print('Hello,', name)",
+            "def square(x): return x * x",
+            "print('Welcome!')",
+            "len = 5"
+            ],
+            answer: "def square(x): return x * x",
+            explanation: "This is a function because it returns a result."
+        },
+        {
+            question: "Which of the following is a valid procedure in Python?",
+            options: [
+            "def add(a, b): return a + b",
+            "def say_hi(): print('Hi there!')",
+            "def cube(x): return x**3",
+            "math.sqrt(16)"
+            ],
+            answer: "def say_hi(): print('Hi there!')",
+            explanation: "This is a procedure because it performs an action without returning a value."
+        },
+        {
+            question: "Which of these is NOT a source of functions and procedures?",
+            options: [
+            "User-written",
+            "Built-in",
+            "Third-party libraries",
+            "Machine hardware"
+            ],
+            answer: "Machine hardware",
+            explanation: "Functions and procedures come from user-written code, built-in features, standard libraries, or third-party libraries."
+        },
+        {
+            question: "What is a drawback of using pre-written code?",
+            options: [
+            "It saves development time",
+            "It may not fit exact needs",
+            "It reduces errors",
+            "It encourages modularity"
+            ],
+            answer: "It may not fit exact needs",
+            explanation: "Pre-written code is convenient but may not do exactly what the program requires."
+        },
+        {
+            question: "What will this code output?\n\ndef multiply(a, b):\n    return a * b\n\ndef show_result(r):\n    print('Result:', r)\n\nres = multiply(4, 5)\nshow_result(res)",
+            options: ["20", "Result: 20", "multiply(4, 5)", "Error"],
+            answer: "Result: 20",
+            explanation: "multiply returns 20, and show_result prints it with text."
+        },
+        {
+            question: "When should you use a function instead of a procedure?",
+            options: [
+            "When you only need to display a message",
+            "When you want to reuse code without return values",
+            "When a value needs to be returned after processing",
+            "When working with input/output files"
+            ],
+            answer: "When a value needs to be returned after processing",
+            explanation: "Functions are used for calculations or data processing that must return a result."
+        },
+        {
+            question: "Which of the following is a pre-written function in a library?",
+            options: [
+            "len('Hello')",
+            "def add(a, b): return a + b",
+            "def greet(name): print('Hi', name)",
+            "print('Welcome')"
+            ],
+            answer: "len('Hello')",
+            explanation: "len is a built-in function provided by Python."
+        },
+        {
+            question: "Which error will this code cause?\n\ndef divide(a, b):\n    return a / b\n\nprint(divide(10, 0))",
+            options: ["SyntaxError", "NameError", "ZeroDivisionError", "TypeError"],
+            answer: "ZeroDivisionError",
+            explanation: "Division by zero is not allowed, so Python raises a ZeroDivisionError."
+        },
+        {
+            question: "What is a good first step when debugging a function?",
+            options: [
+            "Delete the function and start over",
+            "Check the parameters passed to the function",
+            "Only test the procedure part of the program",
+            "Avoid using return statements"
+            ],
+            answer: "Check the parameters passed to the function",
+            explanation: "Incorrect or unexpected inputs are a common source of function errors."
+        }
+        ];
+
+
+
+        let currentQ = 0;
+        let score = 0;
+
+        const questionEl = document.getElementById("question");
+        const optionsEl = document.getElementById("options");
+        const feedbackEl = document.getElementById("feedback");
+        const resultEl = document.getElementById("result");
+        const nextBtn = document.getElementById("nextBtn");
+
+        function showQuestion() {
+          const q = quizData[currentQ];
+          questionEl.textContent = q.question;
+          feedbackEl.textContent = "";
+          feedbackEl.className = "quiz-feedback";
+          nextBtn.style.display = "none";
+
+          optionsEl.innerHTML = "";
+          q.options.forEach(opt => {
+            const btn = document.createElement("button");
+            btn.textContent = opt;
+            btn.onclick = () => checkAnswer(opt, btn);
+            optionsEl.appendChild(btn);
+          });
+        }
+
+        function checkAnswer(answer, button) {
+          const q = quizData[currentQ];
+          const optionButtons = optionsEl.querySelectorAll("button");
+
+          // Disable all buttons after an answer
+          optionButtons.forEach(b => b.disabled = true);
+
+          if (answer === q.answer) {
+            score++;
+            button.classList.add("correct");
+            feedbackEl.textContent = "✅ Correct! " + q.explanation;
+            feedbackEl.classList.add("correct");
+          } else {
+            button.classList.add("wrong");
+            feedbackEl.textContent = `❌ Wrong. The correct answer is "${q.answer}". ${q.explanation}`;
+            feedbackEl.classList.add("wrong");
+
+            // Highlight correct answer
+            optionButtons.forEach(b => {
+              if (b.textContent === q.answer) {
+                b.classList.add("correct");
+              }
+            });
+          }
+
+          nextBtn.style.display = "block";
+        }
+
+        function nextQuestion() {
+          currentQ++;
+          if (currentQ < quizData.length) {
+            showQuestion();
+          } else {
+            showResult();
+          }
+        }
+
+        function showResult() {
+          questionEl.textContent = "";
+          optionsEl.innerHTML = "";
+          feedbackEl.textContent = "";
+          nextBtn.style.display = "none";
+          resultEl.textContent = `You scored ${score} out of ${quizData.length}! 🎉`;
+        }
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        // Start quiz
+        showQuestion();
+      </script>
+
     </main>
     
     <arrow-Nav>
