--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.9-design-considerations-and-programming-practices/2.9-design-considerations-and-programming-practices.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.9-design-considerations-and-programming-practices/2.9-design-considerations-and-programming-practices.html
@@ -234,6 +234,210 @@
                 <li>Using descriptive variable names and comments improves maintainability</li>
             </ul>
         </section>
+
+                
+                        <!--quiz-->
+        <div class="quiz-container" id="quiz">
+            <div class="quiz-question" id="question"></div>
+            <div class="quiz-options" id="options"></div>
+            <div class="quiz-feedback" id="feedback"></div>
+            <button class="quiz-next" id="nextBtn" style="display:none;">Next</button>
+        <div class="quiz-result" id="result"></div>
+        </div>
+
+  <script>
+    const quizData = [
+    {
+        question: "What does 'logical order of actions' mean in programming?",
+        options: [
+        "Arranging steps randomly",
+        "Arranging steps in a sequence that makes sense and produces the correct result",
+        "Arranging steps alphabetically",
+        "Reordering steps to minimize typing"
+        ],
+        answer: "Arranging steps in a sequence that makes sense and produces the correct result",
+        explanation: "Logical order ensures actions follow a sensible flow, preventing logical errors."
+    },
+    {
+        question: "Why is the order of operations important in calculations?",
+        options: [
+        "It reduces typing",
+        "It ensures outputs are accurate and avoids errors like dividing by zero",
+        "It automatically chooses the fastest algorithm",
+        "It makes variables global"
+        ],
+        answer: "It ensures outputs are accurate and avoids errors like dividing by zero",
+        explanation: "Correct ordering prevents runtime errors and ensures accurate results."
+    },
+    {
+        question: "Which data structure is best for mapping student IDs to names for quick lookups?",
+        options: [
+        "List",
+        "Dictionary",
+        "Array",
+        "Tuple"
+        ],
+        answer: "Dictionary",
+        explanation: "Dictionaries store key-value pairs, making them ideal for quick lookups by ID."
+    },
+    {
+        question: "What is the benefit of arranging the order of actions efficiently?",
+        options: [
+        "It makes code more colorful",
+        "It ensures fast execution and minimizes memory usage",
+        "It guarantees bug-free code",
+        "It removes the need for testing"
+        ],
+        answer: "It ensures fast execution and minimizes memory usage",
+        explanation: "Efficient ordering avoids unnecessary repetition and improves performance."
+    },
+    {
+        question: "What is the main advantage of using meaningful naming conventions?",
+        options: [
+        "They shorten the code",
+        "They improve readability and maintainability",
+        "They prevent syntax errors",
+        "They increase execution speed"
+        ],
+        answer: "They improve readability and maintainability",
+        explanation: "Meaningful names make code easier to read, understand, and maintain."
+    },
+    {
+        question: "Which naming convention is shown here? studentName = 'Alice'",
+        options: [
+        "snake_case",
+        "camelCase",
+        "PascalCase",
+        "kebab-case"
+        ],
+        answer: "camelCase",
+        explanation: "camelCase starts with a lowercase letter and capitalizes each new word."
+    },
+    {
+        question: "Which naming convention is shown here? total_score = 95",
+        options: [
+        "snake_case",
+        "camelCase",
+        "PascalCase",
+        "UPPERCASE"
+        ],
+        answer: "snake_case",
+        explanation: "snake_case joins words with underscores for readability."
+    },
+    {
+        question: "How do code style conventions impact readability?",
+        options: [
+        "They slow down execution",
+        "They make programs easier to understand and maintain",
+        "They remove the need for debugging",
+        "They automatically optimize memory usage"
+        ],
+        answer: "They make programs easier to understand and maintain",
+        explanation: "Consistent style, indentation, and naming conventions improve readability."
+    },
+    {
+        question: "Which factor is LEAST important when judging the suitability of an algorithm?",
+        options: [
+        "Efficiency in execution time",
+        "Efficient use of memory",
+        "Clarity and maintainability",
+        "The programmer’s favorite color"
+        ],
+        answer: "The programmer’s favorite color",
+        explanation: "Algorithm suitability depends on efficiency, memory use, and maintainability—not irrelevant factors."
+    },
+    {
+        question: "Why is a dictionary often more suitable than a list for searching?",
+        options: [
+        "Because dictionaries sort automatically",
+        "Because dictionary lookups are faster using keys",
+        "Because lists cannot store text values",
+        "Because dictionaries use less memory"
+        ],
+        answer: "Because dictionary lookups are faster using keys",
+        explanation: "Dictionaries provide O(1) lookups by key, while lists require O(n) searching."
+    }
+    ];
+
+
+
+
+        let currentQ = 0;
+        let score = 0;
+
+        const questionEl = document.getElementById("question");
+        const optionsEl = document.getElementById("options");
+        const feedbackEl = document.getElementById("feedback");
+        const resultEl = document.getElementById("result");
+        const nextBtn = document.getElementById("nextBtn");
+
+        function showQuestion() {
+          const q = quizData[currentQ];
+          questionEl.textContent = q.question;
+          feedbackEl.textContent = "";
+          feedbackEl.className = "quiz-feedback";
+          nextBtn.style.display = "none";
+
+          optionsEl.innerHTML = "";
+          q.options.forEach(opt => {
+            const btn = document.createElement("button");
+            btn.textContent = opt;
+            btn.onclick = () => checkAnswer(opt, btn);
+            optionsEl.appendChild(btn);
+          });
+        }
+
+        function checkAnswer(answer, button) {
+          const q = quizData[currentQ];
+          const optionButtons = optionsEl.querySelectorAll("button");
+
+          // Disable all buttons after an answer
+          optionButtons.forEach(b => b.disabled = true);
+
+          if (answer === q.answer) {
+            score++;
+            button.classList.add("correct");
+            feedbackEl.textContent = "✅ Correct! " + q.explanation;
+            feedbackEl.classList.add("correct");
+          } else {
+            button.classList.add("wrong");
+            feedbackEl.textContent = `❌ Wrong. The correct answer is "${q.answer}". ${q.explanation}`;
+            feedbackEl.classList.add("wrong");
+
+            // Highlight correct answer
+            optionButtons.forEach(b => {
+              if (b.textContent === q.answer) {
+                b.classList.add("correct");
+              }
+            });
+          }
+
+          nextBtn.style.display = "block";
+        }
+
+        function nextQuestion() {
+          currentQ++;
+          if (currentQ < quizData.length) {
+            showQuestion();
+          } else {
+            showResult();
+          }
+        }
+
+        function showResult() {
+          questionEl.textContent = "";
+          optionsEl.innerHTML = "";
+          feedbackEl.textContent = "";
+          nextBtn.style.display = "none";
+          resultEl.textContent = `You scored ${score} out of ${quizData.length}! 🎉`;
+        }
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        // Start quiz
+        showQuestion();
+      </script>
+
     </main>
     
     <arrow-Nav>
